New in TeachingDemos version 2.8

* new functions TkBuildDist and TkBuildDist2 to interactively create a
  (prior) distrbution.

* new function cal to plot calendars

* new 'animate' option for tkexamp

* new function 'petals' to play the petals around the rose game (and
  demonstrate a simple code obscuration).

* fixed bug in subplot when subplotting inside mfrow/mfcol figures.

* Added ldsgrowth dataset

* Modified subplot and other functions to no longer need cnvrt.coords.

* cnvert.coords is now depricated, use grconvertX and grconvertY from
  the graphics package instead.

* Functions identify.Map, identify.polylist, recenter.Map, and
  project.Map have been removed as there is now better functionality
  in the sp package.

* The state.vbm object has been moved to the maptools package.

New in TeachingDemos version 2.7

* new function ms.image for plotting images using my.symbols.

* new functions wdtxtStart and friends to insert transcript into MS Word.

* function vt.residsim to work with vis.test.

* fixed several functions that depend on tcltk but did not load it.

* Updated HWidentify and HTKidentify to give more control and clean up after.

* Removed exaple in subplot using rimage package since it is not
  current and potentially causes problems.

New in TeachingDemos version 2.6

* function vis.test and friends made available (was present before,
  but not in the Namespace).

* Fixed bug in tkexamp with checkboxes.

* Added 'outliers' dataset

New in TeachingDemos version 2.5

* New functions HWidentify and HTKidentify to label points being hovered over.

* Turned off clipping (par(xpd=TRUE)) inside of my.symbols so that
  subsequent points are plotted

* New function sigma.test for testing a single variance.


New in TeachingDemos version 2.4

* The squishplot function now calls plot.new before doing the
  calculations, fixs a bug when things have not been reset or if fig
  regions are not all the same size.  There is an argument that will