@@ -1,4 +1,5 @@
-my.symbols <- function(x, y=NULL, symb, inches=1, add=TRUE,
+my.symbols <- function(x, y=NULL, symb, inches=1, xsize, ysize,
+                       add=TRUE,
                        vadj=0.5, hadj=0.5,
                        symb.plots=FALSE,
                        xlab=deparse(substitute(x)),
@@ -13,6 +14,9 @@ my.symbols <- function(x, y=NULL, symb, inches=1, add=TRUE,
   xy <- xy.coords(x,y,recycle=TRUE)
 
   pin <- par('pin')
+  usr <- par('usr')
+  usr.x <- usr[2] - usr[1]
+  usr.y <- usr[4] - usr[3]
 
 #  tmp <- cnvrt.coords(xy,input='usr')$plt
   tmp <- list()
@@ -31,11 +35,32 @@ my.symbols <- function(x, y=NULL, symb, inches=1, add=TRUE,
     vadj <- rep(vadj, length.out=tmp.xlen)
   }
 
+  if( missing(xsize) ) {
+      if( missing(ysize) ) { # use inches
+          x.low  <- tmp$x -    hadj *inches/pin[1]
+          x.high <- tmp$x + (1-hadj)*inches/pin[1]
+          y.low  <- tmp$y -    vadj *inches/pin[2]
+          y.high <- tmp$y + (1-vadj)*inches/pin[2]
+      } else { # ysize only
+          y.low  <- tmp$y - vadj*ysize/usr.y
+          y.high <- tmp$y + (1-vadj)*ysize/usr.y
+          x.low  <- tmp$x - hadj/pin[1]*pin[2]/usr.y*ysize
+          x.high <- tmp$x + (1-hadj)/pin[1]*pin[2]/usr.y*ysize
+      }
+  } else {
+      if( missing(ysize) ) { # xsize only
+          x.low  <- tmp$x - hadj*xsize/usr.x
+          x.high <- tmp$x + (1-hadj)*xsize/usr.x
+          y.low  <- tmp$y - vadj/pin[2]*pin[1]/usr.x*xsize
+          y.high <- tmp$y + (1-vadj)/pin[2]*pin[1]/usr.x*xsize
+      } else {  # both xsize and ysize
+          x.low  <- tmp$x - hadj*xsize/usr.x
+          x.high <- tmp$x + (1-hadj)*xsize/usr.x
+          y.low  <- tmp$y - vadj*ysize/usr.y
+          y.high <- tmp$y + (1-vadj)*ysize/usr.y
+      }
+  }
 
-  x.low  <- tmp$x -    hadj *inches/pin[1]
-  x.high <- tmp$x + (1-hadj)*inches/pin[1]
-  y.low  <- tmp$y -    vadj *inches/pin[2]
-  y.high <- tmp$y + (1-vadj)*inches/pin[2]
 
 #  xy.low  <- cnvrt.coords(x.low,  y.low,  'plt')$fig
 #  xy.high <- cnvrt.coords(x.high, y.high, 'plt')$fig
